<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_SystemState" Id="{e9d0f5d3-d47e-485c-a637-88ed8eb03f8a}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_SystemState :
STRUCT
	sOperatingState : STRING; //operating state as string
	nOperatingState : E_SystemOperatingState; //operating state as integer
	bError : BOOL; //true if there is an error in any system component
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>